--- a/example/requirements.txt
+++ b/example/requirements.txt
@@ -1,3 +1,2 @@
 django>=2.0
-django-crispy-forms
-dynamic-django-forms
+dynamic-django-forms @ git+https://github.com/mast3rbow/dynamic-django-forms
