--- a/.gitignore
+++ b/.gitignore
@@ -6860,3 +6860,4 @@ dynamic-django-forms/Scripts/pip3.exe
 dynamic-django-forms/Scripts/python.exe
 dynamic-django-forms/Scripts/pythonw.exe
 dynamic-django-forms/Scripts/sqlformat.exe
+dynamic-django-forms/Lib/site-packages/dynamic_django_forms-0.1.11.dist-info/direct_url.json
